[fix] overflow-y scroll for nori and bento descriptions

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -369,7 +369,7 @@ input {
   padding-top: 10px;
   padding-bottom: 10px;
   max-height: 100%;
-  /*overflow-y: scroll;*/
+  overflow-y: scroll;
 }
 
 .card-front {
@@ -510,6 +510,7 @@ input {
     padding-left: 10px;
     padding-right: 10px;
     height: 17.5ex;
+    overflow-y: scroll;
 }
 
 .search-item {
